# orcaslicer-filament-tool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  Test.flattened.json  build.bat  build.sh  orca_extra_profile_check.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml
samples/: README.md
src/: __init__.py  cli.py  config.py  constants.py  exporter.py  parser.py  resolver.py  validator.py
temp/: Fiberon PA6-GF Quidi Q1 Pro mi3.flattened.json
tests/: test_cli.py  test_config.py  test_exporter.py  test_resolver.py  test_validator.py
